--- a/setup.html
+++ b/setup.html
@@ -3,16 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>تهيئة النظام - OMA</title>
+<title>تهيئة نظام OMA</title>
+<style>
+body { font-family:'Cairo',sans-serif; background:#f5f9ff; display:flex; justify-content:center; align-items:center; height:100vh; margin:0; }
+.box { background:white; padding:30px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); text-align:center; width:320px; }
+button { padding:12px 20px; border:none; border-radius:8px; background:#004aad; color:white; cursor:pointer; font-size:16px; margin-top:15px; }
+button:hover { background:#003a8c; }
+p { margin-top:15px; font-size:14px; }
+</style>
 </head>
 <body>
-<h2>جارٍ تهيئة النظام...</h2>
-<p id="status"></p>
+<div class="box">
+  <h2>تهيئة نظام OMA</h2>
+  <p>إنشاء حساب مسؤول الموقع تلقائيًا</p>
+  <button id="initBtn">ابدأ التهيئة</button>
+  <p id="status"></p>
+</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
 import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, setDoc, doc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
 // 🔹 إعداد Firebase
 const firebaseConfig = {
@@ -24,50 +35,40 @@ const firebaseConfig = {
   appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
   measurementId: "G-5CKWYQT9XZ"
 };
-
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 
-const email = "Salahalkaleefa@gmail.com";
-const password = "123456salah";
+const initBtn = document.getElementById('initBtn');
+const status = document.getElementById('status');
 
-const statusEl = document.getElementById("status");
+initBtn.addEventListener('click', async () => {
+  initBtn.disabled = true;
+  status.textContent = "جاري إنشاء حساب المسؤول...";
 
-async function initAdmin() {
+  const email = "Salahalkaleefa@gmail.com";
+  const password = "123456salah";
+
   try {
-    // تحقق إذا المستخدم موجود بالفعل
-    const tempUser = await fetch(`https://identitytoolkit.googleapis.com/v1/accounts:lookup?key=${firebaseConfig.apiKey}`, {
-      method: 'POST',
-      headers: { 'Content-Type':'application/json' },
-      body: JSON.stringify({ idToken: "" })
-    }).catch(()=>null);
-
-    // حاول إنشاء المستخدم
+    // إنشاء المستخدم على Firebase Auth
     const userCred = await createUserWithEmailAndPassword(auth, email, password);
     const uid = userCred.user.uid;
 
-    // أضف بيانات المستخدم في Firestore
+    // إنشاء مستند في Firestore مع type admin
     await setDoc(doc(db, "users", uid), {
-      type: "admin",
       name: "مسؤول الموقع",
-      createdAt: new Date().toISOString()
+      email: email,
+      type: "admin",
+      createdAt: serverTimestamp()
     });
 
-    statusEl.textContent = `تم إنشاء مستخدم المسؤول بنجاح! يمكنك الآن تسجيل الدخول.`;
-    console.log("Admin UID:", uid);
-
-  } catch (err) {
-    if(err.code === "auth/email-already-in-use"){
-      statusEl.textContent = "المستخدم موجود مسبقًا. يمكنك تسجيل الدخول مباشرة.";
-    } else {
-      statusEl.textContent = "حدث خطأ أثناء إنشاء المستخدم: " + err.message;
-      console.error(err);
-    }
+    status.textContent = "✅ تم إنشاء الحساب بنجاح! يمكنك الآن تسجيل الدخول.";
+  } catch (error) {
+    console.error(error);
+    if (error.code === "auth/email-already-in-use") status.textContent = "⚠️ هذا البريد موجود بالفعل.";
+    else status.textContent = "❌ حدث خطأ أثناء التهيئة.";
   }
-}
-
-initAdmin();
+});
 </script>
 </body>
 </html>
