--- a/manage-institutes.html
+++ b/manage-institutes.html
@@ -3,55 +3,53 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>إدارة المعاهد - نظام OMA</title>
+<title>إنشاء المعاهد - نظام OMA</title>
 <style>
-:root{--primary:#004aad;--bg:#f5f9ff;--card:#fff;}
-body{margin:0;font-family:'Cairo',sans-serif;background:var(--bg);padding:20px;}
-header{background:var(--primary);color:#fff;text-align:center;padding:15px;font-size:20px;font-weight:bold;border-radius:8px;}
-h2{color:var(--primary);margin-top:20px;}
-.card{background:var(--card);padding:15px;border-radius:10px;margin-top:15px;box-shadow:0 4px 12px rgba(0,0,0,0.08);}
-input,button{padding:10px;margin:5px 0;border-radius:8px;border:1px solid #ccc;font-size:14px;}
-button{background:var(--primary);color:#fff;border:none;cursor:pointer;transition:0.3s;}
-button:hover{background:#003a8c;}
-table{width:100%;border-collapse:collapse;margin-top:15px;}
-th,td{padding:10px;border:1px solid #ddd;text-align:center;}
-th{background:var(--primary);color:#fff;}
-.error{color:red;font-size:14px;}
+:root { --primary:#004aad; --bg:#f5f9ff; --card:#fff; }
+body { margin:0; font-family:'Cairo',sans-serif; background:var(--bg); }
+header { background:var(--primary); color:white; padding:15px; text-align:center; font-size:20px; font-weight:bold; }
+.container { max-width:900px; margin:30px auto; padding:20px; display:flex; flex-direction:column; gap:20px; }
+.card { background:var(--card); padding:20px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); }
+input, button { padding:10px; margin:5px 0; border-radius:8px; border:1px solid #ccc; width:100%; }
+button { background:var(--primary); color:white; border:none; cursor:pointer; transition:0.3s; }
+button:hover { background:#003a8c; }
+table { width:100%; border-collapse:collapse; margin-top:15px; }
+th, td { border:1px solid #ccc; padding:8px; text-align:center; }
+th { background:var(--primary); color:white; }
+.status { margin-top:10px; font-size:14px; }
 </style>
 </head>
 <body>
-<header>🛠️ إدارة المعاهد - نظام OMA</header>
+<header>إنشاء المعاهد - نظام OMA</header>
+<div class="container">
 
-<div class="card">
-  <h2>إضافة معهد جديد</h2>
-  <p class="error" id="errorMsg"></p>
-  <input type="text" id="instName" placeholder="اسم المعهد" required />
-  <input type="email" id="adminEmail" placeholder="البريد الإلكتروني لمدير المعهد" required />
-  <input type="password" id="adminPass" placeholder="كلمة مرور مدير المعهد" required />
-  <button id="addInstituteBtn">➕ إضافة معهد</button>
-</div>
+  <div class="card">
+    <h3>إضافة معهد جديد</h3>
+    <input type="text" id="instituteName" placeholder="اسم المعهد" required />
+    <input type="email" id="managerEmail" placeholder="البريد الإلكتروني لمدير المعهد" required />
+    <input type="password" id="managerPassword" placeholder="كلمة المرور" required />
+    <button id="addInstituteBtn">➕ إنشاء المعهد</button>
+    <div class="status" id="statusMsg"></div>
+  </div>
 
-<div class="card">
-  <h2>قائمة المعاهد</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>اسم المعهد</th>
-        <th>البريد الإلكتروني للمدير</th>
-        <th>تاريخ الإنشاء</th>
-        <th>إجراءات</th>
-      </tr>
-    </thead>
-    <tbody id="institutesTable"></tbody>
-  </table>
+  <div class="card">
+    <h3>قائمة المعاهد الحالية</h3>
+    <table>
+      <thead>
+        <tr><th>اسم المعهد</th><th>مدير المعهد</th><th>تاريخ الإنشاء</th></tr>
+      </thead>
+      <tbody id="institutesTable"></tbody>
+    </table>
+  </div>
+
 </div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, createUserWithEmailAndPassword, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getFirestore, collection, doc, setDoc, getDocs, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-// Firebase config
+// إعداد Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
   authDomain: "oma0-33cc0.firebaseapp.com",
@@ -61,105 +59,82 @@ const firebaseConfig = {
   appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
   measurementId: "G-5CKWYQT9XZ"
 };
-
 const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
 const db = getFirestore(app);
+const auth = getAuth(app);
 
 // عناصر DOM
-const instName = document.getElementById('instName');
-const adminEmail = document.getElementById('adminEmail');
-const adminPass = document.getElementById('adminPass');
-const addInstituteBtn = document.getElementById('addInstituteBtn');
-const errorMsg = document.getElementById('errorMsg');
-const institutesTable = document.getElementById('institutesTable');
+const instituteNameInput = document.getElementById("instituteName");
+const managerEmailInput = document.getElementById("managerEmail");
+const managerPasswordInput = document.getElementById("managerPassword");
+const addInstituteBtn = document.getElementById("addInstituteBtn");
+const statusMsg = document.getElementById("statusMsg");
+const institutesTable = document.getElementById("institutesTable");
 
 // إضافة معهد جديد
-addInstituteBtn.addEventListener('click', async () => {
-  const name = instName.value.trim();
-  const email = adminEmail.value.trim();
-  const password = adminPass.value.trim();
-  if(!name || !email || !password){ errorMsg.textContent="جميع الحقول مطلوبة"; return; }
-
-  errorMsg.textContent="";
+addInstituteBtn.addEventListener("click", async () => {
+  const name = instituteNameInput.value.trim();
+  const email = managerEmailInput.value.trim();
+  const password = managerPasswordInput.value.trim();
+  if (!name || !email || !password) {
+    statusMsg.style.color = "red";
+    statusMsg.textContent = "الرجاء تعبئة جميع الحقول.";
+    return;
+  }
+  
   addInstituteBtn.disabled = true;
-  addInstituteBtn.textContent="جاري الإنشاء...";
+  statusMsg.style.color = "black";
+  statusMsg.textContent = "جاري إنشاء المعهد...";
 
-  try{
-    // إنشاء حساب مدير المعهد في Firebase Auth
+  try {
+    // إنشاء مستخدم مدير المعهد
     const userCred = await createUserWithEmailAndPassword(auth, email, password);
     const uid = userCred.user.uid;
 
-    // إنشاء وثيقة المعهد
-    const instRef = await addDoc(collection(db,'institutes'), {
+    // إنشاء مستند للمعهد
+    const instituteRef = doc(db, "institutes", uid);
+    await setDoc(instituteRef, {
       name: name,
-      adminEmail: email,
-      adminUid: uid,
+      managerEmail: email,
+      managerUid: uid,
       createdAt: serverTimestamp()
     });
 
-    // إنشاء حساب المستخدم في جدول users
-    await setDoc(doc(db,'users',uid),{
-      uid: uid,
-      email: email,
-      type: "instituteAdmin",
-      instituteId: instRef.id,
-      createdAt: serverTimestamp()
-    });
-
-    instName.value = ""; adminEmail.value = ""; adminPass.value = "";
-    addInstituteBtn.disabled = false;
-    addInstituteBtn.textContent = "➕ إضافة معهد";
-
+    statusMsg.style.color = "green";
+    statusMsg.textContent = "تم إنشاء المعهد بنجاح!";
+    instituteNameInput.value = "";
+    managerEmailInput.value = "";
+    managerPasswordInput.value = "";
+    
+    // إعادة تحميل قائمة المعاهد
     loadInstitutes();
-    alert("تم إنشاء المعهد بنجاح!");
-  }catch(e){
-    console.error(e);
-    errorMsg.textContent = "حدث خطأ أثناء إنشاء المعهد.";
+
+  } catch (error) {
+    console.error(error);
+    statusMsg.style.color = "red";
+    statusMsg.textContent = "حدث خطأ أثناء إنشاء المعهد.";
+  } finally {
     addInstituteBtn.disabled = false;
-    addInstituteBtn.textContent = "➕ إضافة معهد";
   }
 });
 
-// تحميل المعاهد وعرضها
-async function loadInstitutes(){
+// تحميل قائمة المعاهد
+async function loadInstitutes() {
   institutesTable.innerHTML = "";
-  const snap = await getDocs(collection(db,'institutes'));
-  snap.forEach(docSnap=>{
-    const data = docSnap.data();
-    const tr = document.createElement('tr');
+  const snap = await getDocs(collection(db, "institutes"));
+  snap.forEach(d => {
+    const data = d.data();
+    const tr = document.createElement("tr");
     tr.innerHTML = `
-      <td>${data.name || '-'}</td>
-      <td>${data.adminEmail || '-'}</td>
-      <td>${data.createdAt ? new Date(data.createdAt.seconds*1000).toLocaleDateString() : '-'}</td>
-      <td><button onclick="createAdditionalAdmin('${docSnap.id}','${data.adminUid}')">➕ إضافة مسؤول</button></td>
+      <td>${data.name || "-"}</td>
+      <td>${data.managerEmail || "-"}</td>
+      <td>${data.createdAt ? new Date(data.createdAt.seconds*1000).toLocaleString() : "-"}</td>
     `;
     institutesTable.appendChild(tr);
   });
 }
 
-// إنشاء مسؤول إضافي للمعهد
-window.createAdditionalAdmin = async (instituteId, originalAdminUid) => {
-  const email = prompt("أدخل بريد المسؤول الجديد:");
-  const password = prompt("أدخل كلمة المرور:");
-  if(!email || !password) return alert("البريد وكلمة المرور مطلوبة.");
-
-  try{
-    const userCred = await createUserWithEmailAndPassword(auth, email, password);
-    const uid = userCred.user.uid;
-    await setDoc(doc(db,'users',uid),{
-      uid: uid,
-      email: email,
-      type: "instituteAdmin",
-      instituteId: instituteId,
-      createdAt: serverTimestamp()
-    });
-    alert("تم إنشاء مسؤول إضافي بنجاح!");
-    loadInstitutes();
-  }catch(e){ console.error(e); alert("حدث خطأ أثناء إنشاء المسؤول."); }
-}
-
-// تحميل المعاهد عند فتح الصفحة
+// تحميل عند البداية
 loadInstitutes();
 </script>
 </body>
